fix overflow behavior with insufficient height

--- a/styles/style.css
+++ b/styles/style.css
@@ -318,3 +318,10 @@ button {
         font-size:36px;
     }
 }
+
+
+@media (max-height: 1080px) {
+    .top, .midtext {
+        overflow:scroll;
+    }
+}
